# mcts-dissertation-code

./: README.md
benchmark/: README.md  config.py  main.py  pyproject.toml
benchmark/src/algorithms/: __init__.py  heuristic_algorithms.py  mcts_setups.py
benchmark/src/types/: __init__.py  types.py
benchmark/src/utils/: __init__.py  input_utils.py
mcts/: README.md  pyproject.toml
mcts/src/mcts/: __init__.py  monte_carlo_tree_search.py
mcts/src/mcts/algorithms/opt/: __init__.py  opt_default_policy.py  opt_tree_node.py  opt_tree_policy.py
mcts/src/mcts/algorithms/uct/: __init__.py  uct_default_policy.py  uct_tree_node.py  uct_tree_policy.py
mcts/src/mcts/interfaces/: __init__.py  default_policy.py  state.py  tree_policy.py
mcts/src/mcts/other/: __init__.py  solutions.py
mcts/src/mcts/sample/: __init__.py  graph_color_dsatur_state.py  graph_color_seq_state.py  tic_tac_toe_state.py
