[project]
name = "mcts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JPauloL", email = "jpaulolmail@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
